# lumina

./: .env.example  .gitignore  Cargo.toml  README.md
database/migrations/: 2026_01_01_000001_create_users_table.sql
resources/views/: welcome.blade.rs
routes/: web.rs
src/: main.rs
src/routes/: api.rs  web.rs
