[package]
name = "lumina-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lumina-framework = { path = "../framework" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
async-trait = "0.1"

[[bin]]
name = "lumina-server"
path = "src/main.rs"
